# indexedtarfile

./: .gitignore  AUTHORS  ChangeLog  README  setup.cfg  tox.ini
indexedtarfile/: __init__.py  fileview.py  multifile.py  sparsefile.py
tests/fixtures/: sparse.tar
tests/unit/: test_cpythontarfile.py  test_fileview.py  test_indexedtarfile.py  test_multifile.py  test_sparsefile.py
