[metadata]
name = indexedtarfile
author = Roberto Abdelkader Martínez Pérez
author-email = robertomartinezp@gmail.com
summary = Compatible Python tarfile module with entry index.
description-file = README
home-page = https://github.com/nilp0inter/indexedtarfile
license = LGPLv3
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    tarfile
[files]
packages =
    indexedtarfile
